# Raytracing_SDL

./: .gitignore
Raytracing/: CMakeLists.txt
Raytracing/demo/: CMakeLists.txt  main.cpp
Raytracing/include/Raytracing/: Raytracing.h
Raytracing/include/Raytracing/Light/: Light.h  LightManager.h
Raytracing/include/Raytracing/Shapes/: Circle.h  Rectangle.h  Shape.h
Raytracing/include/Raytracing/Utils/: Colors.h  Vector.h
Raytracing/src/: CMakeLists.txt
Raytracing/src/Raytracing/: Raytracing.cpp
Raytracing/src/Raytracing/Light/: Light.cpp  LightManager.cpp
Raytracing/src/Raytracing/Shapes/: Circle.cpp  Rectangle.cpp  Shape.cpp
Raytracing/src/Raytracing/Utils/: Vector.cpp
